examples/bad/11.emm
int f() {
  return "test";
}

int main () {
  int x = f();
  return 0;
}
